--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,220 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
+
+/* Login css */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.container-login-main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-image: url("https://img.rawpixel.com/private/static/images/website/2022-05/upwk61843118-wikimedia-image-kowc5fl7.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=fa1fe774ca2208773517b43dfd2b4f46");
+  background-size: cover;
+  background-position: center;
+}
+.container-login-main .card-tech {
+  height: 500px;
+  width: 800px;
+  background-color: #fff;
+  position: relative;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  font-family: "Source Sans Pro", sans-serif;
+  border-radius: 10px;
+}
+.container-login-main .card-tech .form-hai {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+.container-login-main.card-tech .left-side-you {
+  width: 50%;
+  background-color: #000;
+  height: 100% !important;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  overflow: hidden;
+}
+.left-side-you img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.right-side-php {
+  width: 50%;
+  background-color: #efecf2;
+  height: 100%;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  padding: 20px;
+}
+.main {
+  display: none;
+}
+.active {
+  display: block;
+}
+.register-main p {
+  display: flex;
+  justify-content: end;
+  font-size: 13px;
+  font-weight: 600;
+  color: #2a2739;
+}
+.register-main p a {
+  text-decoration: none;
+  color: blue;
+  margin-left: 3px;
+}
+.hello-login-heading {
+  /* margin-top: 40px; */
+  text-align: center;
+  color: #2a2739;
+}
+.hello-login-heading h4 {
+  margin-top: 5px;
+}
+.input_text_emails {
+  position: relative;
+  margin-top: 10px;
+}
+input[type="text"] {
+  height: 45px;
+  width: 100%;
+  border: none;
+  outline: 0;
+  padding: 0 10px;
+  font-size: 13px;
+  border-radius: 10px;
+  border: 1px solid #fff;
+  margin: 5px;
+}
+input[type="password"] {
+  height: 45px;
+  width: 100%;
+  border: none;
+  outline: 0;
+  padding: 0 10px;
+  font-size: 13px;
+  border-radius: 10px;
+  padding-right: 33px;
+  border: 1px solid #fff;
+}
+.input_text_emails p {
+  margin-top: 4px;
+  font-size: 13px;
+  margin-left: 10px;
+  color: red;
+}
+.danger {
+  display: none;
+}
+.input_text_passwords p i {
+  margin-right: 2px;
+}
+.fa-eye-slash {
+  position: absolute;
+  top: 15px;
+  right: 8px;
+  cursor: pointer;
+  color: #727286;
+}
+.fa-eye {
+  position: absolute;
+  top: 20px;
+  right: 1px;
+  cursor: pointer;
+  color: #727286;
+}
+.recovery-karo {
+  margin-top: 15px;
+  font-size: 13px;
+  text-align: end;
+}
+.btn-button-signupp {
+  margin-top: 15px;
+}
+.btn-button-signupp button {
+  height: 45px;
+  width: 100%;
+  border: none;
+  outline: 0;
+  background-color: #fe6b68;
+  border-radius: 10px;
+  transition: all 0.5s;
+  cursor: pointer;
+  font-size: 13px;
+  color: #fff;
+}
+.btn button:hover {
+  background-color: #f1221e;
+}
+.right-side hr {
+  margin-top: 30px;
+  color: #fff;
+  border: 0;
+  border-top: 1px solid #fff;
+}
+.or-kya {
+  display: flex;
+  justify-content: center;
+  font-size: 13px;
+  /* newadded trial */
+  word-spacing: normal;
+}
+.or-kya p {
+  z-index: 2;
+  margin-top: -10px;
+  background-color: #efecf2;
+  padding: 0 4px;
+}
+.boxes-big {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+.boxes-big span {
+  height: 45px;
+  width: 60px;
+  border: 1px solid #fff;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  transition: all 0.5s;
+}
+.boxes-big span img {
+  width: 30px;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+.boxes-big span:hover img {
+  width: 35px;
+}
+.boxes-big span:hover {
+  border: 4px solid #fff;
+}
+.warning {
+  border: 1px solid red !important;
+}
+@media (max-width: 750px) {
+  .container-login-main.card {
+    max-width: 350px;
+  }
+  .container-login-main.card .right-side {
+    border-radius: 10px;
+    width: 100%;
+  }
+  .container-login-main.card .left-side {
+    display: none;
+  }
+}
+
+/* login css end */
